creacion de la rejilla

--- a/Blog_Musica/index.html
+++ b/Blog_Musica/index.html
@@ -5,24 +5,19 @@
       <meta name="viewport" content="width=device-width,user-scalable=no">
       <meta name='mobile-web-app-capable' content='yes'>
       <meta name="keywords" content="blog, muisica, rock, noticias-rock, grupos, bandas, lanzamientos, canciones, artistas">
-      <link rel="stylesheet" href="bootstrap-3.3.7-dist/css/bootstrap.min.css">
+      <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/estilos.css">
       <script src='js/bootstrap.min.js'></script>
       <title>Blog HR Music</title>
     </head>
     <body>
-      <body>
-        <div class="row">
-          <div class="logo">
-            logo
-          </div>
-          <div class="redes">
-            redes
-          </div>
-        </div>
-
-
-
-      </body>
+      <header>
+        <nav class="col s10 m10 l10 navbar navbar-inverse navbar-fixed-top affix-top">
+          <img class="logo-img" src='img/logohr.jpg'/>
+        </nav>
+      </header>
+      <div id="barra">
+        hola
+      </div>
     </body>
 </html>
