--- a/Blog_Musica/index.html
+++ b/Blog_Musica/index.html
@@ -11,13 +11,40 @@
       <title>Blog HR Music</title>
     </head>
     <body>
-      <header>
-        <nav class="col s10 m10 l10 navbar navbar-inverse navbar-fixed-top affix-top">
-          <img class="logo-img" src='img/logohr.jpg'/>
-        </nav>
-      </header>
-      <div id="barra">
-        hola
+      <section>
+        <div class="row logo-redes">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-4">
+            <img src="img/logohr.jpg" class="logo mg-thumbnail">
+          </div>
+          <div class="col-lg-5 col-md-9 col-sm-9 col-xs-8"></div>
+          <div class="col-lg-4 col-md-12 col-sm-12 col-xs-12">
+            <div class='redes-sociales'>
+              <img class='img-rounded img-social' src='img/face.png'/>
+              <img class='img-rounded img-social' src='img/instagram.png'/>
+              <img class='img-rounded img-social' src='img/twitter.png'/>
+              <img class='img-rounded img-social' src='img/wp.png'/>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color: #42a5f5">
+            <div id="menu">
+              <nav>
+                  <a href="index">Inicio</a>
+                  <a href="rock">Rokeros</a>
+                  <a href="#">Sencillos</a>
+                  <a href="#">Noticias</a>
+                  <a href="#">Discografias</a>
+                  <a href="#">Contactenos</a>
+              </nav>
+          </div>
+        </div>
       </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="background-color: black">Columna1</div>
+          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="background-color: gray">Columna2</div>
+          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="background-color: orange">Columna3</div>
+        </div>
+      </section>
     </body>
 </html>
