--- a/Blog_Musica/index.html
+++ b/Blog_Musica/index.html
@@ -41,9 +41,34 @@
         </div>
       </div>
         <div class="row">
-          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="background-color: black">Columna1</div>
-          <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6" style="background-color: gray">Columna2</div>
-          <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3" style="background-color: orange">Columna3</div>
+          <div class="col-lg-8 col-md-8 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
+            <h3>Bruce Springsteen visita una tienda de guitarras con su amigo Peter Wolf</h3>
+          </br>
+          </br>
+            <p>
+              Bruce Springsteen ha estado pasando mucho tiempo en Boston recientemente. A principios de este mes, The Boss tomó unas cuantas copas y visitó a un músico local en The Bebop en Boylston Street, y el viernes pasado estuvo n la famosa tienda de  Mr. Music en Allston para probar algunas guitarras con su amigo, el legendario músico de Boston. Peter Wolf , el lider de la J. Geils Band.
+            </br>
+            <div class="">
+              <img class="img-noticias img-thumbnail" src="img/bruce.jpg">
+            </div>
+            </br>
+              Springsteen y Wolf pasaron unos 40 minutos en la tienda independiente, pasándose el tiempo en la sección de Telecaster y simplemente ocupándose de sus propios asuntos, sin ser reconocidos por otros compradores. Springsteen también adquirió y tocó una guitarra Gibson Byrdland de los años 70, y esa guitarra se vendió ayer, probablemente por alguien que no se dio cuenta de que The Boss la había tocado unos días antes.
+            </br>
+            </br>
+              La tienda Mr. Music publicó algunas imágenes de cámaras de vigilancia de la visita improvisada de Bruce Springsteen y Peter Wolf.
+            </p>
+            <form role="form">
+              <div class="form-group">
+                <label for="comentario">Comentario</label>
+                <textarea name="comentario" rows="3" cols="40" class="form-control"></textarea>
+              </div>
+
+              <div class="form-group">
+                <input type="button" name="boton" value="Enviar" class="btn btn-default">
+              </div>
+            </form>
+          </div>
+          <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="background-color: orange">Columna2</div>
         </div>
       </section>
     </body>
