--- a/Blog_Musica/index.html
+++ b/Blog_Musica/index.html
@@ -31,44 +31,111 @@
             <div id="menu">
               <nav>
                   <a href="index">Inicio</a>
-                  <a href="rock">Rokeros</a>
-                  <a href="#">Sencillos</a>
-                  <a href="#">Noticias</a>
-                  <a href="#">Discografias</a>
-                  <a href="#">Contactenos</a>
+                  <a href="rock">Rokero</a>
+                  <a href="sencillos">Sencillos</a>
+                  <a href="noticias">Noticias</a>
+                  <a href="discografias">Discografias</a>
+                  <a href="contac">Contactenos</a>
               </nav>
           </div>
         </div>
       </div>
         <div class="row">
           <div class="col-lg-8 col-md-8 col-md-offset-1 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1">
-            <h3>Bruce Springsteen visita una tienda de guitarras con su amigo Peter Wolf</h3>
-          </br>
-          </br>
-            <p>
-              Bruce Springsteen ha estado pasando mucho tiempo en Boston recientemente. A principios de este mes, The Boss tomó unas cuantas copas y visitó a un músico local en The Bebop en Boylston Street, y el viernes pasado estuvo n la famosa tienda de  Mr. Music en Allston para probar algunas guitarras con su amigo, el legendario músico de Boston. Peter Wolf , el lider de la J. Geils Band.
+            <div>
+              <h3>Bruce Springsteen visita una tienda de guitarras con su amigo Peter Wolf</h3>
             </br>
-            <div class="">
-              <img class="img-noticias img-thumbnail" src="img/bruce.jpg">
+            </br>
+              <p class="texto">
+                Bruce Springsteen ha estado pasando mucho tiempo en Boston recientemente. A principios de este mes, The Boss tomó unas cuantas copas y visitó a un músico local en The Bebop en Boylston Street, y el viernes pasado estuvo n la famosa tienda de  Mr. Music en Allston para probar algunas guitarras con su amigo, el legendario músico de Boston. Peter Wolf , el lider de la J. Geils Band.
+              </p>
+              </br>
+              <div class="">
+                <img class="img-noticias img-thumbnail" src="img/bruce.jpg">
+              </div>
+              </br>
+              <p class="texto">
+                Springsteen y Wolf pasaron unos 40 minutos en la tienda independiente, pasándose el tiempo en la sección de Telecaster y simplemente ocupándose de sus propios asuntos, sin ser reconocidos por otros compradores. Springsteen también adquirió y tocó una guitarra Gibson Byrdland de los años 70, y esa guitarra se vendió ayer, probablemente por alguien que no se dio cuenta de que The Boss la había tocado unos días antes.
+              </p>
+              </br>
+              </br>
+              <p class="texto">
+                La tienda Mr. Music publicó algunas imágenes de cámaras de vigilancia de la visita improvisada de Bruce Springsteen y Peter Wolf.
+              </p>
+              <form role="form">
+                <div class="form-group">
+                  <label for="comentario">Comentario</label>
+                  <textarea name="comentario" rows="3" cols="40" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                  <input type="button" name="boton" value="Enviar" class="btn btn-default">
+                </div>
+              </form>
             </div>
+            <legend></legend>
+            <div>
+              <h3>La legendaria banda de KISS tendra sus propios emojis</h3>
             </br>
-              Springsteen y Wolf pasaron unos 40 minutos en la tienda independiente, pasándose el tiempo en la sección de Telecaster y simplemente ocupándose de sus propios asuntos, sin ser reconocidos por otros compradores. Springsteen también adquirió y tocó una guitarra Gibson Byrdland de los años 70, y esa guitarra se vendió ayer, probablemente por alguien que no se dio cuenta de que The Boss la había tocado unos días antes.
             </br>
-            </br>
-              La tienda Mr. Music publicó algunas imágenes de cámaras de vigilancia de la visita improvisada de Bruce Springsteen y Peter Wolf.
-            </p>
-            <form role="form">
-              <div class="form-group">
-                <label for="comentario">Comentario</label>
-                <textarea name="comentario" rows="3" cols="40" class="form-control"></textarea>
+              <p>
+                KISS se prepara para despedirse de los escenarios con su gira de despedida, sin embargo, buscan mantenerse vigentes en el mundo digital con una serie de emojis. Así es, los icónicos rostros maquillados de los integrantes de la banda de glam metal estarán disponibles muy pronto para que los envíes por mensajería instantánea, confirmó Lisa Streff de la empresa Epic Rights.
+              <div class="">
+                <img class="img-noticias img-thumbnail" src="img/kiss.jpg">
               </div>
+              </br>
+                “Estamos emocionados por lanzar KISS x emoji a los millones de fans de la banda”, expresó en un comunicado recogido por El Universal. Además, la compañía Blabbermouth estrenará accesorios, calzado, artículos de colección, figuras, artículos para el hogar y hasta de papelería.
+                <div class="">
+                  <img class="img-noticias img-rounded" src="img/kiss_emoji.jpg">
+                </div>
+                </br>
+                  KISS visitará México una última ocasión para ofrecer un concierto único, el cual forma parte del End Of The Road Tour, gira con la que le dirán el último adiós a sus fans en festival Domination MX que se llevará a cabo el próximo 3 y 4 de mayo en el Autódromo Hermanos Rodríguez.
+                </br>
+              </p>
+              <form role="form">
+                <div class="form-group">
+                  <label for="comentario">Comentario</label>
+                  <textarea name="comentario" rows="3" cols="40" class="form-control"></textarea>
+                </div>
 
-              <div class="form-group">
-                <input type="button" name="boton" value="Enviar" class="btn btn-default">
-              </div>
-            </form>
+                <div class="form-group">
+                  <input type="button" name="boton" value="Enviar" class="btn btn-default">
+                </div>
+              </form>
+            </div>
           </div>
-          <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="background-color: orange">Columna2</div>
+          <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12" style="background-color: #bbdefb">
+            <div class="search-container">
+              <p class="search-title">
+                Busqueda
+              </p>
+              <input class="search-input" type="text" placeholder="Search">
+            </div>
+            <br>
+            <div>
+              <ul>
+                <li>Metallica</li>
+                <li>Nirvana</li>
+                <li>Coldplay</li>
+                <li>Twenty One Pilots</li>
+                <li>The Beatles</li>
+                <li>Linkin Park</li>
+                <li>Red Hot Chili Peppers</li>
+                <li>Panic! A The Disco</li>
+                <li>Arctic Monkeys</li>
+                <li>Queen</li>
+                <li>Fall Out Boy</li>
+                <li>Green Day</li>
+                <li>AC/DC</li>
+                <li>Pink Floyd</li>
+                <li>Blink-182</li>
+                <li>Paramore</li>
+                <li>Guns N’ Roses</li>
+                <li>The Rolling Stones</li>
+                <li>The 1975</li>
+                <li>Kings of Leon</li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
     </body>
