--- a/Blog_Gastronomia/index.html
+++ b/Blog_Gastronomia/index.html
@@ -2,15 +2,48 @@
 <html>
     <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width,user-scalable=no">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
       <meta name='mobile-web-app-capable' content='yes'>
+      <meta http-equiv="x-ua-compatible" content="ie=edge">
       <meta name="keywords" content="blog, comida, carne, noticias-gastronomicas, pollo, pescado, comida-mar, recetas, chef">
-      <link rel="stylesheet" href="css/foundation.css">
-      <link rel="stylesheet" href="css/app.css">
-      <link rel="stylesheet" href="css/estilos.css">
+      <link rel="stylesheet" href="css/foundation.css" media="screen" charset="utf-8">
+      <link rel="stylesheet" href="css/app.css" media="screen" charset="utf-8">
+      <link rel="stylesheet" href="css/foundation.min.css" media="screen" charset="utf-8">
+      <link rel="stylesheet" href="css/estilos.css" media="screen" charset="utf-8">
       <title>Bogotá Gourmet</title>
     </head>
     <body>
+      <div id="barra" class="row">
+        <div class="columns ">
+          <div class="row aling-right">
+            <div class="larg-2 medium-2 small-2 columns text-right">
+              <h3>Bogotá Gourmet</h3>
+              <img src="img/logo.jpg" class="logo-img">
+            </div>
+          </div>
+        </div>
+      </div>
+      <legend></legend>
+      <div id="contenido" class="row">
+        <div class="small-12 medium-12 large-12 column">
+          <div class="row">
+            <div class="small-4 medium-4 large-4 column" style="background-color: white">
+              <div class="medium-8 columns">
+                <ul class="menu vertical text-left">
+                  <li><a href="#">One</a></li>
+                  <li><a href="#">Two</a></li>
+                  <li><a href="#">Three</a></li>
+                  <li><a href="#">Four</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="small-8 medium-8 large-8 column" style="background-color: gray">
+              Columna 2
+            </div>
+          </div>
+        </div>
+      </div>
+
 
 
       <script src="js/vendor/jquery.js"></script>
