--- a/Blog_Gastronomia/index.html
+++ b/Blog_Gastronomia/index.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" href="css/app.css" media="screen" charset="utf-8">
       <link rel="stylesheet" href="css/foundation.min.css" media="screen" charset="utf-8">
       <link rel="stylesheet" href="css/estilos.css" media="screen" charset="utf-8">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
       <title>Bogotá Gourmet</title>
     </head>
     <body>
@@ -27,18 +28,155 @@
       <div id="contenido" class="row">
         <div class="small-12 medium-12 large-12 column">
           <div class="row">
-            <div class="small-4 medium-4 large-4 column" style="background-color: white">
-              <div class="medium-8 columns">
-                <ul class="menu vertical text-left">
-                  <li><a href="#">One</a></li>
-                  <li><a href="#">Two</a></li>
-                  <li><a href="#">Three</a></li>
-                  <li><a href="#">Four</a></li>
+            <div class="small-4 medium-4 large-4 column">
+              <div class="input-group searchbar">
+                <div class="input-group-button">
+                  <button class="button search">
+                    <svg width="100" height="100" viewBox="0 0 100 100">
+                    <path fill="#FFF" fill-rule="evenodd" d="M42.117,12.246 C50.1209,12.246 57.797,15.4257 63.453,21.0858 C69.1132,26.742 72.2928,34.4178 72.2928,42.4218 C72.2928,50.4258 69.1131,58.1018 63.453,63.7578 C57.7968,69.418 50.121,72.5976 42.117,72.5976 C34.1131,72.5976 26.437,69.4179 20.781,63.7578 C15.1208,58.1016 11.9412,50.4258 11.9412,42.4218 C11.9412,34.4178 15.1209,26.7418 20.781,21.0858 C26.4372,15.4256 34.113,12.246 42.117,12.246 L42.117,12.246 Z M76.0828827,67.3362833 C82.3527829,58.7859894 85.2617455,48.0434678 83.9173,37.22271 C82.0618,22.28871 72.3743,9.47671 58.5153,3.61771 L58.51139,3.61771 C53.32389,1.41851 47.74139,0.28961 42.10539,0.29741 L42.117,0.305 C29.058,0.30891 16.742,6.3675 8.769001,16.707 C0.7924008,27.047 -1.933999,40.5 1.382301,53.129 C4.698701,65.758 13.6833,76.137 25.7103,81.223 L25.7103,81.22691 C39.5733,87.08631 55.5113,85.10191 67.5153,76.02771 C67.5852345,75.9748392 67.6549736,75.9217748 67.724517,75.8685177 L91.555,99.6990032 L100.0003,91.253703 L76.0828827,67.3362833 Z"/>
+                    </svg>
+                  </button>
+                </div>
+                <input class="input-field search-field" type="search" placeholder="Busqueda" />
+              </div>
+              <legend>__________________________________</legend>
+              <div class="medium-6 columns menu-centered">
+                <ul class="menu vertical">
+                  <li><a href="#">Inicio</a></li>
+                  <li><a href="#">Recetas</a></li>
+                  <li><a href="#">Platos Especiales</a></li>
+                  <li><a href="#">Novedades</a></li>
                 </ul>
               </div>
+              <legend>__________________________________</legend>
+              <div class="row">
+                <div class="contenedor small-12 medium-12 large-12 column">
+                  <div class="row">
+                    <div class="favoritos">
+                      <img src="img/empanadas.jpg" alt="Decoracion 1" class="thumbnail"/>
+                    </div>
+                    <div class="favoritos">
+                      <img src="img/arepas.jpg" alt="Decoracion 1" class="thumbnail"/>
+                    </div>
+                    <div class="favoritos">
+                      <img src="img/babybeef.jpg" alt="Decoracion 1" class="thumbnail"/>
+                    </div>
+                    <div class="favoritos">
+                      <img src="img/changua.jpg" alt="Decoracion 1" class="thumbnail"/>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <legend>__________________________________</legend>
+              <div class="row">
+                <div class="medium-12 columns menu-centered">
+                  <ul class="menu vertical">
+                    <li class="list-group-item"><a href="https://www.saltodelangel.com.co/" target="_blank">Salto del Ángel</a></li>
+                    <li class="list-group-item"><a href="https://www.laventanarestaurante.com/" target="_blank">La Ventana</a></li>
+                    <li class="list-group-item"><a href="http://www.lacasadelabruja.com/" target="_blank">La Casa De La Bruja</a></li>
+                    <li class="list-group-item"><a href="https://www.restaurantegatonegro.com.co/" target="_blank">gato Negro</a></li>
+                    <li class="list-group-item"><a href="http://www.laprovencedeandrei.com/" target="_blank">La Provence De Andrei</a></li>
+                    <li class="list-group-item"><a href="http://www.miel.com.co/" target="_blank">Miel</a></li>
+                    <li class="list-group-item"><a href="http://www.elarabe.co/eventos/" target="_blank">El Árabe</a></li>
+                    <li class="list-group-item"><a href="http://tramonti.com.co/" target="_blank">Tramontini</a></li>
+                  </ul>
+                </div>
+                <legend>__________________________________</legend>
+              </div>
             </div>
-            <div class="small-8 medium-8 large-8 column" style="background-color: gray">
-              Columna 2
+            <div class="small-8 medium-8 large-8 column">
+              <h1>Post</h1>
+              <img src="img/ajiaco.jpg">
+              <br>
+              <br>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <label>
+                Deja tu comentario aqui
+                <textarea placeholder="Comentario"></textarea>
+              </label>
+
+              <div class="comments-container">
+		<h1>Comentarios</h1>
+
+		<ul id="comments-list" class="comments-list">
+			<li>
+				<div class="comment-main-level">
+					<div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
+					<!-- Contenedor del Comentario -->
+					<div class="comment-box">
+						<div class="comment-head">
+							<h6 class="comment-name by-author">Andres Perez</h6>
+							<span>hace 18 minutos</span>
+							<i class="fa fa-reply"></i>
+							<i class="fa fa-heart"></i>
+						</div>
+						<div class="comment-content">
+							Que delicia comer Ajiaco en Gato Negro, que restaurante y la atencion super fantastica, super recomendado
+						</div>
+					</div>
+				</div>
+				<!-- Respuestas de los comentarios -->
+				<ul class="comments-list reply-list">
+					<li>
+						<!-- Avatar -->
+						<div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
+						<!-- Contenedor del Comentario -->
+						<div class="comment-box">
+							<div class="comment-head">
+								<h6 class="comment-name">Carolina Leandro</a></h6>
+								<span>hace 12 minutos</span>
+								<i class="fa fa-reply"></i>
+								<i class="fa fa-heart"></i>
+							</div>
+							<div class="comment-content">
+								Pues la verdad no me parecio tanto, yo estuve hace poco en el, la atencion muy normal, nada fuera de lo comun, el que si me gusto bastante y te lo recomuiendo Andres es la casa de la bruja, ahi hacen un ajiaco delicioso.
+							</div>
+						</div>
+					</li>
+
+					<li>
+						<!-- Avatar -->
+						<div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
+						<!-- Contenedor del Comentario -->
+						<div class="comment-box">
+							<div class="comment-head">
+								<h6 class="comment-name by-author">Andres Perez</h6>
+								<span>hace 9 minutos</span>
+								<i class="fa fa-reply"></i>
+								<i class="fa fa-heart"></i>
+							</div>
+							<div class="comment-content">
+								Si, es delicioso, ese restaurante esta en mi lista de favoritos, gracias por tu recomendacion.
+							</div>
+						</div>
+					</li>
+				</ul>
+			</li>
+
+			<li>
+				<div class="comment-main-level">
+					<!-- Avatar -->
+					<div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
+					<!-- Contenedor del Comentario -->
+					<div class="comment-box">
+						<div class="comment-head">
+							<h6 class="comment-name by-author">Adriana Moreno</h6>
+							<span>hace 22 minutos</span>
+							<i class="fa fa-reply"></i>
+							<i class="fa fa-heart"></i>
+						</div>
+						<div class="comment-content">
+							Estuve en el restaurante Salto del Ángel y no me parecion un buen plato este ajiaco preparado allí, no recomendado.
+						</div>
+					</div>
+				</div>
+			</li>
+		</ul>
+	</div>
+
+
+              <legend>________________________________________________________________________</legend>
+
             </div>
           </div>
         </div>
@@ -50,5 +188,6 @@
       <script src="js/vendor/what-input.js"></script>
       <script src="js/vendor/foundation.js"></script>
       <script src="js/app.js"></script>
+      <script src="js/home.js"></script>
     </body>
 </html>
