--- a/Blog_Gastronomia/index.html
+++ b/Blog_Gastronomia/index.html
@@ -85,94 +85,95 @@
               </div>
             </div>
             <div class="small-8 medium-8 large-8 column">
-              <h1>Post</h1>
+              <h1>Ajiaco Santafereño</h1>
               <img src="img/ajiaco.jpg">
               <br>
               <br>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <label>
+              <p style="background-color: rgba(255,255,255,0.6)">El ajiaco criollo se prepara con carne de res, gallina, cerdo, tasajo y un hueso de jamón o lacón a la que se le agrega maíz, calabaza, malanga blanca, malanga amarilla, ñame, plátanos verdes y maduros, yuca y boniato. Se aliña con ají, cebolla, ajo, comino, sal y limón. Una tradición oral cuenta que este caldo se confecciona en los barrios cubanos la noche del 24 de junio para comenzar las fiestas de San Juan. Se cree que la tradición nació en la plaza de "El Carmen", Camagüey, cuando los vecinos, mayormente pobres, no tenían suficiente para una comida, se reunían aportando lo que cada cual podía, posiblemente sobras de la cena de la noche anterior, de allí la variedad de ingredientes.</p>
+              <label style="background-color: rgba(255,255,255,0.6)">
                 Deja tu comentario aqui
                 <textarea placeholder="Comentario"></textarea>
               </label>
 
-              <div class="comments-container">
-		<h1>Comentarios</h1>
+              <div class="comments-container small-12 medium-12 large-12 column">
+              		<h1>Comentarios</h1>
 
-		<ul id="comments-list" class="comments-list">
-			<li>
-				<div class="comment-main-level">
-					<div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
-					<!-- Contenedor del Comentario -->
-					<div class="comment-box">
-						<div class="comment-head">
-							<h6 class="comment-name by-author">Andres Perez</h6>
-							<span>hace 18 minutos</span>
-							<i class="fa fa-reply"></i>
-							<i class="fa fa-heart"></i>
-						</div>
-						<div class="comment-content">
-							Que delicia comer Ajiaco en Gato Negro, que restaurante y la atencion super fantastica, super recomendado
-						</div>
-					</div>
-				</div>
-				<!-- Respuestas de los comentarios -->
-				<ul class="comments-list reply-list">
-					<li>
-						<!-- Avatar -->
-						<div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
-						<!-- Contenedor del Comentario -->
-						<div class="comment-box">
-							<div class="comment-head">
-								<h6 class="comment-name">Carolina Leandro</a></h6>
-								<span>hace 12 minutos</span>
-								<i class="fa fa-reply"></i>
-								<i class="fa fa-heart"></i>
-							</div>
-							<div class="comment-content">
-								Pues la verdad no me parecio tanto, yo estuve hace poco en el, la atencion muy normal, nada fuera de lo comun, el que si me gusto bastante y te lo recomuiendo Andres es la casa de la bruja, ahi hacen un ajiaco delicioso.
-							</div>
-						</div>
-					</li>
+              		<ul id="comments-list" class="comments-list">
+              			<li>
+              				<div class="comment-main-level">
+              					<div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
+              					<!-- Contenedor del Comentario -->
+              					<div class="comment-box">
+              						<div class="comment-head">
+              							<h6 class="comment-name by-author">Andres Perez</h6>
+              							<span>hace 18 minutos</span>
+              							<i class="fa fa-reply"></i>
+              							<i class="fa fa-heart"></i>
+              						</div>
+              						<div class="comment-content">
+              							Que delicia comer Ajiaco en Gato Negro, que restaurante y la atencion super fantastica, super recomendado
+              						</div>
+              					</div>
+              				</div>
+              				<!-- Respuestas de los comentarios -->
+              				<ul class="comments-list reply-list">
+              					<li>
+              						<!-- Avatar -->
+              						<div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
+              						<!-- Contenedor del Comentario -->
+              						<div class="comment-box">
+              							<div class="comment-head">
+              								<h6 class="comment-name">Carolina Leandro</a></h6>
+              								<span>hace 12 minutos</span>
+              								<i class="fa fa-reply"></i>
+              								<i class="fa fa-heart"></i>
+              							</div>
+              							<div class="comment-content">
+              								Pues la verdad no me parecio tanto, yo estuve hace poco en el, la atencion muy normal, nada fuera de lo comun, el que si me gusto bastante y te lo recomuiendo Andres es la casa de la bruja, ahi hacen un ajiaco delicioso.
+              							</div>
+              						</div>
+              					</li>
 
-					<li>
-						<!-- Avatar -->
-						<div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
-						<!-- Contenedor del Comentario -->
-						<div class="comment-box">
-							<div class="comment-head">
-								<h6 class="comment-name by-author">Andres Perez</h6>
-								<span>hace 9 minutos</span>
-								<i class="fa fa-reply"></i>
-								<i class="fa fa-heart"></i>
-							</div>
-							<div class="comment-content">
-								Si, es delicioso, ese restaurante esta en mi lista de favoritos, gracias por tu recomendacion.
-							</div>
-						</div>
-					</li>
-				</ul>
-			</li>
+              					<li>
+              						<!-- Avatar -->
+              						<div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
+              						<!-- Contenedor del Comentario -->
+              						<div class="comment-box">
+              							<div class="comment-head">
+              								<h6 class="comment-name by-author">Andres Perez</h6>
+              								<span>hace 9 minutos</span>
+              								<i class="fa fa-reply"></i>
+              								<i class="fa fa-heart"></i>
+              							</div>
+              							<div class="comment-content">
+              								Si, es delicioso, ese restaurante esta en mi lista de favoritos, gracias por tu recomendacion.
+              							</div>
+              						</div>
+              					</li>
+              				</ul>
+              			</li>
 
-			<li>
-				<div class="comment-main-level">
-					<!-- Avatar -->
-					<div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
-					<!-- Contenedor del Comentario -->
-					<div class="comment-box">
-						<div class="comment-head">
-							<h6 class="comment-name by-author">Adriana Moreno</h6>
-							<span>hace 22 minutos</span>
-							<i class="fa fa-reply"></i>
-							<i class="fa fa-heart"></i>
-						</div>
-						<div class="comment-content">
-							Estuve en el restaurante Salto del Ángel y no me parecion un buen plato este ajiaco preparado allí, no recomendado.
-						</div>
-					</div>
-				</div>
-			</li>
-		</ul>
-	</div>
+              			<li>
+              				<div class="comment-main-level">
+              					<!-- Avatar -->
+              					<div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
+              					<!-- Contenedor del Comentario -->
+              					<div class="comment-box">
+              						<div class="comment-head">
+              							<h6 class="comment-name by-author">Adriana Moreno</h6>
+              							<span>hace 22 minutos</span>
+              							<i class="fa fa-reply"></i>
+              							<i class="fa fa-heart"></i>
+              						</div>
+              						<div class="comment-content">
+              							Estuve en el restaurante Salto del Ángel y no me parecion un buen plato este ajiaco preparado allí, no recomendado.
+              						</div>
+              					</div>
+              				</div>
+              			</li>
+              		</ul>
+              	</div>
+
 
 
               <legend>________________________________________________________________________</legend>
