--- a/Blog_Gastronomia/index.html
+++ b/Blog_Gastronomia/index.html
@@ -80,7 +80,7 @@
                 </div>
               </div>
             </div>
-            <div class="small-8 medium-8 large-8 column">
+            <div class="small-12 medium-12 large-8 column">
               <h1>Ajiaco Santafereño</h1>
               <img src="img/ajiaco.jpg">
               <br>
@@ -157,6 +157,82 @@
                     </li>
                   </ul>
                 </div>
+                <h1>Sancocho</h1>
+                <img src="img/sancocho.jpg">
+                <br>
+                <br>
+                <p style="background-color: rgba(255,255,255,0.6)">El sancocho es una sopa hecha con carnes, tubérculos, verduras y condimentos. Entre sus orígenes parecen estar el ajiaco taíno, el cocido español, la olla podrida española, y los estofados corso, irlandés, danés, alemán, italiano y francés.</p>
+                <label style="background-color: rgba(255,255,255,0.6)">
+                  Deja tu comentario aqui
+                  <textarea placeholder="Comentario"></textarea>
+                </label>
+                <div class="comments-container small-12 medium-12 large-12 column">
+                  <h1>Comentarios</h1>
+                  <ul id="comments-list" class="comments-list">
+                    <li>
+                      <div class="comment-main-level">
+                        <div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
+                          <div class="comment-box">
+                            <div class="comment-head">
+                              <h6 class="comment-name by-author">Carolina Leandro</h6>
+                              <span>hace 40 minutos</span>
+                              <i class="fa fa-reply"></i>
+                              <i class="fa fa-heart"></i>
+                            </div>
+                            <div class="comment-content">
+                              Este sancocho es super delicioso, ojala hubiera un sitio donde lo vendieran como el sancho valluno... :(.
+                            </div>
+                          </div>
+                        </div>
+                        <ul class="comments-list reply-list">
+                          <li>
+                            <div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
+                            <div class="comment-box">
+                              <div class="comment-head">
+                                <h6 class="comment-name">Andres Perez</a></h6>
+                                <span>hace 35 minutos</span>
+                                <i class="fa fa-reply"></i>
+                                <i class="fa fa-heart"></i>
+                              </div>
+                              <div class="comment-content">
+                                Caro, en el Salto del Ángel lo venden muy parecido, no es igual por que el valluno es unico, pero muy parecido, muy comodo y buena atencion en este restaurante.
+                              </div>
+                            </div>
+                          </li>
+                          <li>
+                            <div class="comment-avatar"><img src="img/avatar3.png" alt=""></div>
+                            <div class="comment-box">
+                              <div class="comment-head">
+                                <h6 class="comment-name by-author">Carolina Leandro</h6>
+                                <span>hace 29 minutos</span>
+                                <i class="fa fa-reply"></i>
+                                <i class="fa fa-heart"></i>
+                              </div>
+                              <div class="comment-content">
+                                Uyyy, en serio?, gracias por tu recomendacion.
+                              </div>
+                            </div>
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        <div class="comment-main-level">
+                          <div class="comment-avatar"><img src="img/avatar2.png" alt=""></div>
+                          <div class="comment-box">
+                            <div class="comment-head">
+                              <h6 class="comment-name by-author">Abel Maecha</h6>
+                              <span>hace 1 hora</span>
+                              <i class="fa fa-reply"></i>
+                              <i class="fa fa-heart"></i>
+                            </div>
+                            <div class="comment-content">
+                              El sancocho super rico en el Salto del Ángel, recomendadisimo.
+                            </div>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
 
 
 
