--- a/Blog_Gastronomia/index.html
+++ b/Blog_Gastronomia/index.html
@@ -28,7 +28,7 @@
       <div id="contenido" class="row">
         <div class="small-12 medium-12 large-12 column">
           <div class="row">
-            <div class="small-4 medium-4 large-4 column">
+            <div class="large-4 column show-for-large">
               <div class="input-group searchbar">
                 <div class="input-group-button">
                   <button class="button search">
