--- a/Blog_Turismo/index.html
+++ b/Blog_Turismo/index.html
@@ -10,6 +10,33 @@
       <title>Blog Turismo Nacional</title>
     </head>
     <body>
+      <div class="container">
+        <div class="row">
+          <div class="row col l3" style="background-color: gray">
+            logo
+          </div>
+          <div class="row col l9" style="background-color: blue">
+            navegacion
+          </div>
+        </div>
+        <div class="row">
+          <div class="row col l1 #f8bbd0 pink lighten-2">
+            redes
+          </div>
+          <div class="row col l11 #e1bee7 purple lighten-1">
+            imagenes
+          </div>
+        </div>
+        <div class="row">
+          <div class="row col l8 #5c6bc0 indigo lighten-1">
+            post
+          </div>
+          <div class="row col l4 #00897b teal darken-1">
+            autor
+          </div>
+        </div>
+      </div>
+
 
 
 
