--- a/Blog_Turismo/index.html
+++ b/Blog_Turismo/index.html
@@ -11,12 +11,22 @@
     </head>
     <body>
       <div class="container">
-        <div class="row">
-          <div class="row col l3" style="background-color: gray">
-            logo
+        <div class="row col l12 s12 m12 #4dd0e1 cyan lighten-2">
+          <div class="row col l3 s3 m3">
+            <div class="logo alling-left">
+              <img src="img/logo.png" alt="ShareUrCode"class="logo">
+            </div>
           </div>
-          <div class="row col l9" style="background-color: blue">
-            navegacion
+          <div class="row col l9 s9 m9">
+            <nav>
+              <div class="nav-wrapper">
+                <ul id="nav-mobile" class="right hide-on-med-and-down">
+                  <li><a href="sass.html">Inicio</a></li>
+                  <li><a href="badges.html">Tours</a></li>
+                  <li><a href="collapsible.html">Noticias</a></li>
+                </ul>
+              </div>
+            </nav>
           </div>
         </div>
         <div class="row">
