--- a/Blog_Turismo/index.html
+++ b/Blog_Turismo/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
       <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"">
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
       <meta name="keywords" content="paisajes, turismo, caminatas-ecologicas, tour-ecologico, hoteles, rutas, camping, guias, senderos">
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
       <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -11,23 +11,26 @@
     </head>
     <body>
       <div class="container">
-        <div class="row col l12 s12 m12 #4dd0e1 cyan lighten-2">
-          <div class="row col l3 s3 m3">
+        <div class="row col l12 s12 m12">
+          <div class="row col l2 s2 m2">
             <div class="logo alling-left">
               <img src="img/logo.png" alt="ShareUrCode"class="logo">
             </div>
           </div>
-          <div class="row col l9 s9 m9">
+          <div class="row col l10 s10 m10">
             <nav>
-              <div class="nav-wrapper">
-                <ul id="nav-mobile" class="right hide-on-med-and-down">
-                  <li><a href="sass.html">Inicio</a></li>
-                  <li><a href="badges.html">Tours</a></li>
-                  <li><a href="collapsible.html">Noticias</a></li>
+              <div class="col l12 m12 s12 nav-wrapper #4dd0e1 cyan lighten-2">
+                <ul id="nav-mobile" class="right">
+                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">home </i><span class="hide-on-small-only">Inicio</span></a></li>
+                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">time_to_leave </i><span class="hide-on-small-only">Tours</span></a></li>
+                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">person_pin_circle </i><span class="hide-on-small-only">Rutas</span></a></li>
+                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">hotel </i><span class="hide-on-small-only">Hoteles</span></a></li>
+                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">contact_phone </i><span class="hide-on-small-only">Contactenos</span></a></li>
                 </ul>
               </div>
             </nav>
           </div>
+          <h3>Turismo Nacional Para Todos</h3>
         </div>
         <div class="row">
           <div class="row col l1 #f8bbd0 pink lighten-2">
