--- a/Blog_Turismo/index.html
+++ b/Blog_Turismo/index.html
@@ -11,21 +11,21 @@
     </head>
     <body>
       <div class="container">
-        <div class="row col l12 s12 m12">
+        <div id="barra" class="row col l12 s12 m12">
           <div class="row col l2 s2 m2">
             <div class="logo alling-left">
               <img src="img/logo.png" alt="ShareUrCode"class="logo">
             </div>
           </div>
-          <div class="row col l10 s10 m10">
+          <div id="barra-nav" class="row col l10 s10 m10">
             <nav>
               <div class="col l12 m12 s12 nav-wrapper #4dd0e1 cyan lighten-2">
-                <ul id="nav-mobile" class="right">
-                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">home </i><span class="hide-on-small-only">Inicio</span></a></li>
-                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">time_to_leave </i><span class="hide-on-small-only">Tours</span></a></li>
-                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">person_pin_circle </i><span class="hide-on-small-only">Rutas</span></a></li>
-                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">hotel </i><span class="hide-on-small-only">Hoteles</span></a></li>
-                  <li><a class="waves-effect waves-light btn-large"><i class="material-icons right">contact_phone </i><span class="hide-on-small-only">Contactenos</span></a></li>
+                <ul class="right">
+                  <li><a class="icono"><i class="material-icons right">home </i>Inicio</a></li>
+                  <li><a class="icono hide-on-med-and-down"><i class="material-icons right">time_to_leave </i>Tours</a></li>
+                  <li><a class="icono hide-on-med-and-down"><i class="material-icons right">person_pin_circle </i>Rutas</a></li>
+                  <li><a class="icono hide-on-med-and-down"><i class="material-icons right">hotel </i>Hoteles</a></li>
+                  <li><a class="icono"><i class="material-icons right">contact_phone </i>Contactenos</a></li>
                 </ul>
               </div>
             </nav>
@@ -33,19 +33,74 @@
           <h3>Turismo Nacional Para Todos</h3>
         </div>
         <div class="row">
-          <div class="row col l1 #f8bbd0 pink lighten-2">
-            redes
+          <div class="row col l1">
+            <div id="redes" class="col l1 m1 hide-on-med-and-down">
+              <img src="img/fb.png" alt="ShareUrCode"class="z-depth-2"></img>
+              <img src="img/tt.png" alt="ShareUrCode"class="z-depth-2"></img>
+              <img src="img/ig.png" alt="ShareUrCode"class="z-depth-2"></img>
+              <img src="img/in.png" alt="ShareUrCode"class="z-depth-2"></img>
+            </div>
           </div>
-          <div class="row col l11 #e1bee7 purple lighten-1">
-            imagenes
+          <div id="imagenes" class="row col l11 m11 s11">
+            <div class="row">
+              <div class="col l4">
+                  <img src="img/tunja.jpg" alt="tunja" class="z-depth-4">
+              </div>
+              <div class="col l4">
+                  <img src="img/occidente.jpg" alt="occidente" class="z-depth-4">
+              </div>
+              <div class="col l4">
+                  <img src="img/pantano.jpg" alt="pantano" class="z-depth-4">
+              </div>
+            </div>
+            <div class="row">
+              <div class="col l4">
+                  <img src="img/piedemonte.jpg" alt="piedemonte" class="z-depth-4">
+              </div>
+              <div class="col l4">
+                  <img src="img/puente.jpg" alt="puente" class="z-depth-4">
+              </div>
+              <div class="col l4">
+                  <img src="img/cocuy.jpg" alt="cocuy" class="z-depth-4">
+              </div>
+            </div>
           </div>
         </div>
         <div class="row">
-          <div class="row col l8 #5c6bc0 indigo lighten-1">
-            post
+          <div id="post" class="row col l8 m12 s12">
+            <div class="col l6">
+              <img id="post-img" src="img/sal1.jpg" alt="catedral">
+            </div>
+            <p>La Catedral de Sal es un recinto construido en el interior de las minas de sal de Zipaquirá, en el departamento de Cundinamarca, Colombia. El diseño arquitectónico y artístico de la nueva Catedral de Sal, es propio del arquitecto bogotano Roswell Garavito Pearl, el cual salió aprobado tras la elección del proyecto que contenía un total de 44 propuestas en un concurso convocado por la Sociedad Colombiana de Arquitectos en 1990; mientras que la dirección técnica de ingeniería fue ejecutada por el ingeniero bogotano Jorge Enrique Castelblanco Reyes.</p>
+            <p>En su interior se encuentra una rica colección artística, especialmente de esculturas de sal y mármol en un ambiente lleno de un profundo sentido religioso que atrae a turistas. La catedral de Sal de Zipaquirá es considerada como uno de los logros arquitectónicos y artísticos más notables de la arquitectura colombiana, por lo que se le ha otorgado incluso el título de joya arquitectónica de la modernidad. La importancia de la Catedral, radica en su valor como patrimonio cultural, religioso y ambiental.</p>
+
+
+            <p>La Catedral de Sal es un recinto construido en el interior de las minas de sal de Zipaquirá, en el departamento de Cundinamarca, Colombia. El diseño arquitectónico y artístico de la nueva Catedral de Sal, es propio del arquitecto bogotano Roswell Garavito Pearl, el cual salió aprobado tras la elección del proyecto que contenía un total de 44 propuestas en un concurso convocado por la Sociedad Colombiana de Arquitectos en 1990; mientras que la dirección técnica de ingeniería fue ejecutada por el ingeniero bogotano Jorge Enrique Castelblanco Reyes.</p>
+            <p>En su interior se encuentra una rica colección artística, especialmente de esculturas de sal y mármol en un ambiente lleno de un profundo sentido religioso que atrae a turistas. La catedral de Sal de Zipaquirá es considerada como uno de los logros arquitectónicos y artísticos más notables de la arquitectura colombiana, por lo que se le ha otorgado incluso el título de joya arquitectónica de la modernidad. La importancia de la Catedral, radica en su valor como patrimonio cultural, religioso y ambiental.</p>
+            <div class="col l6">
+              <img id="post-img" src="img/sal2.jpg" alt="catedral">
+            </div>
+            <p>En 2007 mediante un concurso para elegir las 7 Maravillas de Colombia; la Catedral de Sal obtuvo la mayor votación; convirtiéndola en la Maravilla No.1 de Colombia, aunque también fue propuesta entre las Nuevas siete maravillas del mundo moderno.</p>
           </div>
-          <div class="row col l4 #00897b teal darken-1">
+          <div class="row col l4 hide-on-med-and-down #00897b teal darken-1">
             autor
+          </div>
+        </div>
+        <div class="row">
+          <div id="post" class="row col l8 m12 s12">
+            <div class="col l6">
+              <img id="post-img" src="img/sal1.jpg" alt="catedral">
+            </div>
+            <p>La Catedral de Sal es un recinto construido en el interior de las minas de sal de Zipaquirá, en el departamento de Cundinamarca, Colombia. El diseño arquitectónico y artístico de la nueva Catedral de Sal, es propio del arquitecto bogotano Roswell Garavito Pearl, el cual salió aprobado tras la elección del proyecto que contenía un total de 44 propuestas en un concurso convocado por la Sociedad Colombiana de Arquitectos en 1990; mientras que la dirección técnica de ingeniería fue ejecutada por el ingeniero bogotano Jorge Enrique Castelblanco Reyes.</p>
+            <p>En su interior se encuentra una rica colección artística, especialmente de esculturas de sal y mármol en un ambiente lleno de un profundo sentido religioso que atrae a turistas. La catedral de Sal de Zipaquirá es considerada como uno de los logros arquitectónicos y artísticos más notables de la arquitectura colombiana, por lo que se le ha otorgado incluso el título de joya arquitectónica de la modernidad. La importancia de la Catedral, radica en su valor como patrimonio cultural, religioso y ambiental.</p>
+
+
+            <p>La Catedral de Sal es un recinto construido en el interior de las minas de sal de Zipaquirá, en el departamento de Cundinamarca, Colombia. El diseño arquitectónico y artístico de la nueva Catedral de Sal, es propio del arquitecto bogotano Roswell Garavito Pearl, el cual salió aprobado tras la elección del proyecto que contenía un total de 44 propuestas en un concurso convocado por la Sociedad Colombiana de Arquitectos en 1990; mientras que la dirección técnica de ingeniería fue ejecutada por el ingeniero bogotano Jorge Enrique Castelblanco Reyes.</p>
+            <p>En su interior se encuentra una rica colección artística, especialmente de esculturas de sal y mármol en un ambiente lleno de un profundo sentido religioso que atrae a turistas. La catedral de Sal de Zipaquirá es considerada como uno de los logros arquitectónicos y artísticos más notables de la arquitectura colombiana, por lo que se le ha otorgado incluso el título de joya arquitectónica de la modernidad. La importancia de la Catedral, radica en su valor como patrimonio cultural, religioso y ambiental.</p>
+            <div class="col l6">
+              <img id="post-img" src="img/sal2.jpg" alt="catedral">
+            </div>
+            <p>En 2007 mediante un concurso para elegir las 7 Maravillas de Colombia; la Catedral de Sal obtuvo la mayor votación; convirtiéndola en la Maravilla No.1 de Colombia, aunque también fue propuesta entre las Nuevas siete maravillas del mundo moderno.</p>
           </div>
         </div>
       </div>
